@@ -22,9 +22,11 @@ class Smarty_Internal_TemplateBase extends Smarty_Internal_Data {
     * @param mixed $cache_id cache id to be used with this template
     * @param mixed $compile_id compile id to be used with this template
     * @param object $ |null $parent next higher level of Smarty variables
+    * @param boolean $display if true template content is display otherwise return
+    * @param boolean $merge_tpl_vars if true parten template variables merged in to local scope
     * @return string rendered template output
     */
-    public function fetch($template = null, $cache_id = null, $compile_id = null, $parent = null, $display = false)
+    public function fetch($template = null, $cache_id = null, $compile_id = null, $parent = null, $display = false, $merge_tpl_vars = true)
     {
         if ($template === null && $this instanceof $this->template_class) {
             $template = $this;
@@ -40,7 +42,7 @@ class Smarty_Internal_TemplateBase extends Smarty_Internal_Data {
         // create template object if necessary
         ($template instanceof $this->template_class)? $_template = $template :
         $_template = $this->createTemplate ($template, $cache_id, $compile_id, $parent, false);
-        if (!($parent instanceof $this->template_class)) {
+        if ($merge_tpl_vars) {
             $ptr_array = array($_template);
             $ptr = $_template;
             while (isset($ptr->parent)) {
@@ -449,7 +451,7 @@ class Smarty_Internal_TemplateBase extends Smarty_Internal_Data {
         $this->smarty->registered_objects[$object_name] =
         array($object_impl, (array)$allowed, (boolean)$smarty_args, (array)$block_methods);
     }
-    
+
     /**
 	 * return a reference to a registered object
 	 *
@@ -466,7 +468,7 @@ class Smarty_Internal_TemplateBase extends Smarty_Internal_Data {
         }
 		return $this->smarty->registered_objects[$name][0];
 	}
-    
+
     /**
     * Registers static classes to be used in templates
     *
